[package]
name = "dc_web"
description = "DigitalCampus2017 Web Backend"
publish = false
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]

[features]
verbose = ["colored"]

[dependencies]
tokio-core = "0.1"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
websocket = "0.20"
regex = "0.2"
chrono = { version = "0.4", features = ["serde"] }

colored = { version = "~1.5", optional = true }

[target.'cfg(unix)'.dependencies]
termios = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
colored = "1.5"
